[package]
name = "market_server"
version = "0.1.0"
authors = ["Nicolas Chan <nicolas@nicolaschan.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.0.0", features = ["sqlite"] }
r2d2 = "0.8.8"
r2d2-diesel = "1.0.0"
rocket = "0.4.2"
rust-argon2 = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pwned = "0.1.2"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "serve", "diesel_sqlite_pool"]
